# media_rs

./: Cargo.toml  README.md
egress/: .dockerignore  Cargo.toml  Dockerfile
egress/deployment/base/: account.yaml  deployment.properties  deployment.yaml  kustomization.yaml  service.yaml
egress/deployment/overlays/local/: kustomization.yaml
egress/src/: azure_storage.rs  config.rs  kubernetes.rs  main.rs  manifest.rs
egress/wwwroot/: hlsjs.html  hlsjs.js  shaka.html  shaka.js
encoder/: Cargo.toml  Dockerfile
encoder/src/: azure_storage.rs  encoder.rs  location.rs  main.rs  packager.rs  preset.rs  uploader.rs
storage/: Cargo.toml
storage/src/: lib.rs
storage_proxy/: Cargo.toml
storage_proxy/src/: lib.rs  storage_client.rs
